# ES

./: .gitignore  AGENTS.md  ANDROID.md  Cargo.toml  ENGINE_MODEL_WORKLOG.md  ENGINE_REFERENCE_TARGETS.md  HIGH_PRECISION_HEADLESS_MODEL.md  HIGH_PRECISION_PARAMETER_AUDIT.md  LICENSE  README.ja.md  README.md  build.rs
.github/workflows/: ci.yml  release-windows.yml
config/: high_precision.yaml  reference_na_i4.yaml  reference_na_i4_dyno.tsv  reference_na_i4_metrics_golden.tsv  sim.yaml
config/presets/: honda_s2000_f20c.yaml  nissan_tiida_hr16de.yaml
dist-docs-check/: README.en.pdf.md  README.ja.pdf.md
docs/: BENCH_CONSOLE_REFERENCE.ja.md  BENCH_CONSOLE_REFERENCE.md  CALIBRATION_MAP_RUNTIME_DECISION_MEMO.ja.md  GUI_REFACTOR_PLAN.ja.md  IMPLEMENTATION_DIRECTION.ja.md  MODEL_REFERENCE.ja.md  MODEL_REFERENCE.md  POST_FIT_RUNTIME_FORMULATION.ja.md  STARTUP_FIT_DECISION_MEMO.ja.md  STARTUP_FIT_MBT_DISCUSSION.ja.md  STARTUP_FIT_OPTIMIZATION_FORMULATION.ja.md  STARTUP_FIT_PREIMPLEMENTATION_SPEC.ja.md  SURROGATE_GUIDE.ja.md  TORQUE_CURVE_REVIEW.md  USER_MANUAL.ja.md  USER_MANUAL.md
scripts/: build-doc-pdfs.sh  package-windows.ps1  pandoc-pdf-header.tex  prepare-release-assets.ps1  prepare_markdown_for_pdf.py
src/: audio.rs  cli.rs  config.rs  constants.rs  dashboard.rs  lib.rs  main.rs  simulator.rs
src/config/: audit.rs
src/dashboard/: app.rs  build_info.rs  mod.rs  simple_view_model.rs  startup_fit.rs  startup_fit_artifact.rs  state.rs  theme.rs  view_model.rs  widgets.rs
src/dashboard/panels/: control_rack.rs  (+7 more)
src/hp/: cli.rs  config.rs  csv.rs  math.rs  mod.rs  model.rs  report.rs  yaml.rs
(+2 files in other folders)
