[package]
name = "es_sim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui_plot", "dep:serde", "dep:serde_yaml"]

[dependencies]
eframe = { version = "0.31", optional = true }
egui_plot = { version = "0.31", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[[bin]]
name = "es_sim"
path = "src/main.rs"
required-features = ["gui"]
